objects/Related_Customer_Business_Priorities__c.object
<CustomObject>
    <fields>
        <fullName>BU_Growth_Strategy__c</fullName>
        <label>BU Growth Strategy</label>
        <referenceTo>BU_Growth_Strategy__c</referenceTo>
        <relationshipLabel>Related Customer Business Priorities</relationshipLabel>
        <relationshipName>Related_Customer_Business_Priorities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Priority__c</fullName>
        <label>Customer Business Priority</label>
        <referenceTo>Customer_Business_Priority__c</referenceTo>
        <relationshipLabel>Related Customer Business Priorities</relationshipLabel>
        <relationshipName>Related_Customer_Business_Priorities1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Key_RCB__c</fullName>
        <label>Unique Key RCB</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Related Customer Business Priorities</label>
    <nameField>
        <displayFormat>RCB-{0000}</displayFormat>
        <label>Related Customer Business Priorities Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Customer Business Priorities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>